# llmfit

./: .gitignore  AGENTS.md  API.md  AUDIO_SUPPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ja.md  README.md  README.zh.md  build-repo.sh  release-please-config.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: ci.yml  community-benchmarks.yml  docker.yml  release-desktop.yml  release-please.yml  release.yml  weekly-model-update.yml
data/: hf_models.json.backup.20260331_154323  onnx_models.json
docs/: benchmarking.md  cli.md  custom-models.md  development.md  how-it-works.md  openclaw.md  platform-support.md  providers.md  tui.md
llmfit-core/: Cargo.toml  build.rs
llmfit-core/data/: baselines.json  benchmark_cache.json  benchmarks.yaml  hf_models.json  schema.json  use_case_benchmarks.json
llmfit-core/data/community/: README.md  schema.json
llmfit-core/data/community/intel-arc-graphics-130v-140v-integrated/: 1783676393-31f19579.json  1783676393-792a24b6-0.json  1783681711-9b1bfd67.json  1784549933-26960319.json
llmfit-core/data/community/nvidia-geforce-rtx-2070-super/: 1784677844-2ff6ea93.json
llmfit-core/data/community/nvidia-geforce-rtx-2080/: 1784193317-d01967fb.json  1784560682-efc5c3a6.json  1784560683-66d0d9d1.json  1784560684-cacae003.json  1784627096-7bd7947b.json  1784627097-07f3856f.json
llmfit-core/data/community/nvidia-geforce-rtx-5070/: 1784651642-be272e2d.json
llmfit-core/data/community/tesla-t4/: 1784112256-43b7d49b.json
llmfit-core/src/: analysis.rs  bench.rs  benchmarks.rs  claim.rs  doctor.rs  fit.rs  hardware.rs  lib.rs  models.rs  plan.rs  providers.rs  quality.rs  share.rs  task_bench.rs  update.rs
llmfit-core/tests/: onnx_models.rs  schema_validation.rs
llmfit-desktop/: tauri.conf.json
llmfit-desktop/src/: main.rs
llmfit-python/: Makefile  hatch_build.py  pyproject.toml
llmfit-python/src/llmfit/: __init__.py  __main__.py
llmfit-python/tests/: test_llmfit.py
llmfit-tui/: Cargo.toml
llmfit-tui/src/: display.rs  main.rs  mcp_server.rs  serve_api.rs  serve_shared.rs  theme.rs  tui_app.rs  tui_events.rs  tui_ui.rs
llmfit-tui/tests/: cli_smoke.rs
scripts/: ai.llmfit.server.plist  ai.llmfit.trigger.plist  llmfit-server-managed.sh  llmfit-server-start-if-down.sh  llmfit-server-trigger.py  scrape_benchmarks.py  scrape_hf_models.py  serve_llmfit.sh  sync_plist.sh  update_models.sh  validate_community_benchmarks.py  validate_generation_scoring.py
